--- a/f25-portfolio-template-main/index.html
+++ b/f25-portfolio-template-main/index.html
@@ -76,12 +76,8 @@
                         <h2 class="heading">About Me</h2>
                         <div class="content">
                             <!-- TODO -->
-                            <p> I have been solving problems in Java since I was but a suckling on my mother's bosom.
-                                I have a degree in Computer Science from a prestigious R1 university. (It's CMU!).
-                                Pls hire me, I literally need food. This is a template of dev portfolio. It is a work in
-                                progress. Slow
-                                progress. But progress nonetheless.
-                                Come back later for some updates and news! </p>
+                            <p> I started learning to code senior year of High School and fell in love instantly.
+                                I currently am pursuing a B.S. in Computer Science at the University of North Carolina at Greensboro.
                         </div>
                         <!--//content-->
                     </div>
@@ -94,8 +90,8 @@
                         <div class="content">
                             <div class="item" name="Job1">
                                 <!-- TODO -->
-                                <h3 class="title">Software Engineering Position <span class="place">
-                                        <a href="#">Company A</a>
+                                <h3 class="title">Artificial Intelligence Researcher <span class="place">
+                                        <a href="#">University of North Carolina at Greensboro</a>
                                     </span>
                                     <span class="year">(2017-2021)</span>
                                 </h3>
@@ -121,8 +117,8 @@
                             </div>
                             <!--//item-->
                             <div class="item" name="Job2">
-                                <h3 class="title">Software Engineering Position - <span class="place">
-                                        <a href="#">Company B</a>
+                                <h3 class="title">Wealth Services Engineering Intern <span class="place">
+                                        <a href="#">Bank of New York</a>
                                     </span>
                                     <span class="year">(2011-2016)</span>
                                 </h3>
@@ -151,9 +147,9 @@
                         <!--//item-->
                         <div class="item">
                             <h3 class="title">
-                                <i class="fa fa-graduation-cap"></i>BSc Computer Science
-                                <!-- TODO --> <span class="university">University of Calgary</span> <span
-                                    class="year">(1977)</span>
+                                <i class="fa fa-graduation-cap"></i>BS Computer Science
+                                <!-- TODO --> <span class="university">University of North Carolina at Greensboro</span> <span
+                                    class="year">(2026)</span>
                             </h3>
 
                             <h6 class="university">Relevant Classes:</h6>
@@ -186,7 +182,7 @@
                                 <li>
                                     <i class="fa fa-envelope"></i>
                                     <span class="sr-only">Email:</span>
-                                    <!-- TODO --> <a href="mailto:james@website.com">James@website.com</a>
+                                    <!-- TODO --> <a href="mailto:brauliope198@gmail.com">brauliope198@gmail.com</a>
                                 </li>
                                 <li>
                                     <i class="fa fa-link"></i>
@@ -229,12 +225,6 @@
                                 </div>
                                 <!--//item-->
                                 <div class="item">
-                                    <h3 class="level-title">CI/CD - Jenkins <span class="level-label"
-                                            data-placement="left" data-animation="true">Intermediate</span>
-                                    </h3>
-                                </div>
-                                <!--//item-->
-                                <div class="item">
                                     <h3 class="level-title">Javascript &amp; jQuery <span class="level-label"
                                             data-placement="left" data-animation="true">Intermediate</span>
                                     </h3>
@@ -254,11 +244,6 @@
                                 <!--//item-->
                                 <div class="item">
                                     <h3 class="level-title">PHP <span class="level-label">Intermediate</span>
-                                    </h3>
-                                </div>
-                                <!--//item-->
-                                <div class="item">
-                                    <h3 class="level-title">Linux <span class="level-label">Intermediate</span>
                                     </h3>
                                 </div>
                                 <!--//item-->
