--- a/f25-portfolio-template-main/projects.html
+++ b/f25-portfolio-template-main/projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <!-- TODO --> <title>YOUR NAME- Projects</title>
+    <!-- TODO --> <title>Braulio Pantoja Esquina - Projects</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,8 +27,8 @@
         <div class="container">
             <img class="profile-image img-responsive pull-left" src="assets/images/avatar.png" alt="Avatar" />
             <div class="profile-content pull-left">
-                <!-- TODO --> <h1 class="name">YOUR NAME</h1>
-                <!-- TODO --> <h2 class="desc">YOUR TITLE</h2>
+                <!-- TODO --> <h1 class="name">Braulio Pantoja Esquina</h1>
+                <!-- TODO --> <h2 class="desc">Software Engineer</h2>
                 <ul class="social list-inline">
                     <li class="list-inline-item">
                         <!-- TODO --> <a href="http://www.linkedin.com">
@@ -38,16 +38,6 @@
                     <li class="list-inline-item">
                         <!-- TODO --> <a href="#">
                             <i class="fa fa-github-alt"></i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <!-- TODO --> <a href="http://www.stackoverflow.com">
-                            <i class="fa fa-stack-overflow"></i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item last-item">
-                        <!-- TODO --> <a href="http://www.codepen.io">
-                            <i class="fa fa-codepen"></i>
                         </a>
                     </li>
                 </ul>
@@ -138,7 +128,7 @@
     <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/plugins/jquery-rss/dist/jquery.rss.min.js"></script>
     <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js">    </script>
-    <!-- TODO --><script>new GitHubCalendar(".calendar", "YOUR GITHUB USERNAME", { responsive: true, global_stats: false });    </script>
+    <!-- TODO --><script>new GitHubCalendar(".calendar", "QueBrau", { responsive: true, global_stats: false });    </script>
     <!-- custom js -->
     <script type="text/javascript" src="assets/js/main.js"></script>
 
